# potato-md

./: Cargo.toml  LICENSE  README.md  build.rs
data/: patato-md.gresource.xml  potato-md.gresource.xml
data/ui/: window.ui
src/: main.rs
src/widgets/: mod.rs
src/widgets/heading_view/: imp.rs  mod.rs
src/widgets/inline_view/: buffer.rs  imp.rs  mod.rs
src/widgets/md_viewer/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
ui/: window.blp
